--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ music21/monkeytype.sqlite3
 .pytest_cache/v/cache/nodeids
 .pytest_cache/v/cache/lastfailed
 .pytest_cache/v/cache/nodeids
+.dmypy.json
