--- a/.pylintrc
+++ b/.pylintrc
@@ -98,6 +98,7 @@ disable=
     not-callable,  # false positives, for instance on x.next()
     raise-missing-from,  # want to do this eventually, but adding 1000 msgs not helpful
     consider-using-f-string,  # future?
+    unnecessary-lambda-assignment,  # opinionated
 
 #       'protected-access', # this is an important one, but for now we do a lot of
 #                           # x = copy.deepcopy(self); x._volume = ... which is not a problem...
