--- a/.github/workflows/pythonpylint.yml
+++ b/.github/workflows/pythonpylint.yml
@@ -64,6 +64,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install -r requirements.txt
+		  python -m pip install types-requests
             - name: Type-check all modules with mypy
               run: |
                   mypy music21
