--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -14,7 +14,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9, "3.10"]
+                python-version: [3.8, 3.9, "3.10"]  # "3.10" must be in quotes to not have it eval to 3.1
         steps:
         - uses: actions/setup-python@v2
           with:
@@ -27,7 +27,7 @@ jobs:
         - name: Run Main Test script
           run: python -c 'from music21.test.testSingleCoreAll import ciMain as ci; ci()'
         - name: Coveralls
-          if: ${{ matrix.python-version == '3.8' }}
+          if: ${{ matrix.python-version == '3.9' }}
           env:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               COVERALLS_SERVICE_NAME: github
