--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,13 @@
 global-include *.p.gz *.py *.txt *.xml *.krn *.mxl *.musicxml *.pdf *.html *.ipynb *.css *.js *.png *.jpg *.mid *.abc *.json *.md *.rst *.rntxt *.command *.scl *nwc *.nwctxt *.wav *.mei LICENSE
 global-exclude *ipynb_checkpoints* *-checkpoint.ipynb
+prune venv
+prune .idea
+prune .ropeproject
+prune .github
+global-exclude venv
+global-exclude .idea
+global-exclude .ropeproject
+global-exclude .github
 prune dist
 prune .mypy_cache
 prune music21/.mypy_cache
