--- a/.github/workflows/pythonpylint.yml
+++ b/.github/workflows/pythonpylint.yml
@@ -15,9 +15,10 @@ jobs:
         steps:
             - uses: actions/checkout@v1
             - name: Set up Python
-              uses: actions/setup-python@v1
+              uses: actions/setup-python@v4
               with:
-                  python-version: '3.8'
+                  python-version: '3.10'
+                  cache: 'pip'
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
@@ -37,9 +38,10 @@ jobs:
         steps:
             - uses: actions/checkout@v1
             - name: Set up Python
-              uses: actions/setup-python@v1
+              uses: actions/setup-python@v4
               with:
-                  python-version: '3.8'
+                  python-version: '3.10'
+                  cache: 'pip'
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
@@ -55,9 +57,10 @@ jobs:
         steps:
             - uses: actions/checkout@v1
             - name: Set up Python
-              uses: actions/setup-python@v1
+              uses: actions/setup-python@v4
               with:
-                  python-version: '3.10'
+                  python-version: '3.10.6'  # pinned until mypy 0.990 is released
+                  cache: 'pip'
             - name: Install mypy
               run: |
                   python -m pip install mypy
