changed color scheme and fonts

--- a/documentation/source/_themes/m21/theme.conf
+++ b/documentation/source/_themes/m21/theme.conf
@@ -1,5 +1,6 @@
 [theme]
 inherit = basic
 stylesheet = m21.css
-pygments_style = fruity
-# note that pygments_style is not currently used
+pygments_style = 'lovelace'
+# note that pygments_style is not currently used for some reason, so copy
+# the appropriate CSS file from pygments to documentation/source/_themes/m21/static/pygments.css
