--- a/.github/workflows/pythonpylint.yml
+++ b/.github/workflows/pythonpylint.yml
@@ -63,7 +63,7 @@ jobs:
                   cache: 'pip'
             - name: Install mypy
               run: |
-                  python -m pip install mypy
+                  python -m pip install mypy==0.982
             - name: Install dependencies
               run: |
                   python -m pip install -r requirements.txt
