--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -33,3 +33,61 @@ jobs:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               COVERALLS_SERVICE_NAME: github
           run: coveralls
+
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v1
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: '3.10'
+                  cache: 'pip'
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt
+                  pip install -r requirements_dev.txt
+            - name: Install music21 in editable mode
+              run: |
+                  python -m pip install -e .
+            - name: Lint with pylint
+              run: |
+                  pylint -j0 music21
+                  pylint -j0 documentation
+
+    flake:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v1
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: '3.10'
+                  cache: 'pip'
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt
+                  pip install -r requirements_dev.txt
+            - name: PEP8 with flake8
+              run: |
+                  flake8 music21
+                  flake8 documentation
+
+    mypy:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v1
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: '3.10.6'  # pinned until mypy 0.990 is released
+                  cache: 'pip'
+            - name: Install dependencies
+              run: |
+                  python -m pip install -r requirements.txt
+                  python -m pip install -r requirements_dev.txt
+            - name: Type-check all modules with mypy
+              run: |
+                  mypy music21
