--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -14,8 +14,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                # "3.11.0-rc.2" waiting for scipy.
-                python-version: ["3.10.6", "3.10"]  # "3.10" must be in quotes to not have it eval to 3.1
+                python-version: ["3.10.6", "3.10", "3.11"]  # "3.10" must be in quotes to not have it eval to 3.1
         steps:
         - uses: actions/setup-python@v4
           with:
