--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -45,6 +45,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
+                  pip install wheel
                   pip install -r requirements.txt
                   pip install -r requirements_dev.txt
             - name: Install music21 in editable mode
@@ -67,6 +68,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
+                  pip install wheel
                   pip install -r requirements.txt
                   pip install -r requirements_dev.txt
             - name: PEP8 with flake8
@@ -81,10 +83,11 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
-                  python-version: '3.10.6'  # pinned until mypy 0.990 is released
+                  python-version: '3.10'
                   cache: 'pip'
             - name: Install dependencies
               run: |
+                  pip install wheel
                   python -m pip install -r requirements.txt
                   python -m pip install -r requirements_dev.txt
             - name: Type-check all modules with mypy
