--- a/.pylintrc
+++ b/.pylintrc
@@ -69,6 +69,7 @@ disable=
     too-many-lines,  # yes, someday
     too-many-return-statements,  # we'll see
     too-many-instance-attributes,  # maybe later
+    too-many-positional-arguments,  # try to get down to 6 first...
     # no-self-use,  # moved to optional extension.
     invalid-name,  # these are good music21 names; fix the regexp instead...
     too-few-public-methods,  # never remove or set to 1
