--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,10 +1,11 @@
 -r requirements.txt
 wheel
+astroid>=3.2.0
 pylint>=2.16.0
 flake8<7.0.0
 flake8-quotes>=3.3.2
 hatchling
-mypy>=1.4.0
+mypy>=1.13.0
 coveralls
 scipy
 sphinx
