Start 9.6 beta - update requirements.dev
Update version for 9.6 beta development

Change the dev requirements to match what Jacob Walls had suggested but that I forgot to do (remove astroid and pin pylint to 3.2 or higher.

Update last couple parts of dist.py

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,6 @@
 -r requirements.txt
 wheel
-astroid>=3.2.0
-pylint>=2.16.0
+pylint>=3.2.0
 flake8<7.0.0
 flake8-quotes>=3.3.2
 hatchling
@@ -17,3 +16,5 @@ nbval
 pytest
 docutils
 types-requests
+twine
+hatch
