--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "jsonpickle",
     "matplotlib",
     "more_itertools",
-    "numpy<2.0.0",
+    "numpy>=1.26.4",
     "requests",
     "webcolors>=1.5",
 ]
