--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,11 @@
 	"name": "Music21",
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.13-bookworm",
 	"features": {
+		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
+    	    "packages": "musescore3,lilypond"
+		}
 	},
+	"postCreateCommand": "pip3 install --user -r requirements_dev.txt;pip3 install --user .",
 	"customizations": {
 		"vscode": {
 			"extensions": [
