--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -14,7 +14,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.11, 3.12, 3.13]
+                python-version: [3.11, 3.12, 3.13, 3.14]
         steps:
         - uses: actions/setup-python@v4
           with:
@@ -40,7 +40,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
-                  python-version: '3.13'
+                  python-version: '3.14'
                   cache: 'pip'
             - name: Install dependencies
               run: |
@@ -63,7 +63,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
-                  python-version: '3.13'
+                  python-version: '3.14'
                   cache: 'pip'
             - name: Install dependencies
               run: |
@@ -83,7 +83,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
-                  python-version: '3.13'
+                  python-version: '3.14'
                   cache: 'pip'
             - name: Install dependencies
               run: |
