--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -19,7 +19,7 @@ jobs:
         - uses: actions/setup-python@v4
           with:
               python-version: ${{ matrix.python-version }}
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v4
         - name: Install Ubuntu dependencies
           run: ./.github/scripts/install_ubuntu_deps.sh
         - name: Setup Lilypond
@@ -36,7 +36,7 @@ jobs:
     lint:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v4
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
@@ -56,10 +56,10 @@ jobs:
                   pylint -j0 music21
                   pylint -j0 documentation
 
-    flake:
+    ruff:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v4
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
@@ -79,7 +79,7 @@ jobs:
     mypy:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v4
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
