--- a/.github/workflows/maincheck.yml
+++ b/.github/workflows/maincheck.yml
@@ -26,6 +26,9 @@ jobs:
               enable-cache: true
               cache-dependency-glob: |
                   pyproject.toml
+        - name: Install dependencies
+          run: |
+              uv pip install --system -e '.[dev]'
         - name: Install Ubuntu dependencies
           run: ./.github/scripts/install_ubuntu_deps.sh
         - name: Setup Lilypond
@@ -56,8 +59,7 @@ jobs:
                       pyproject.toml
             - name: Install dependencies
               run: |
-                  uv pip install wheel
-                  uv pip install -e '.[dev]'
+                  uv pip install --system -e '.[dev]'
             - name: Install music21 in editable mode
               run: |
                   uv pip install -e .
@@ -83,8 +85,7 @@ jobs:
                       pyproject.toml
             - name: Install dependencies
               run: |
-                  uv pip install wheel
-                  uv pip install -e '.[dev]'
+                  uv pip install --system -e '.[dev]'
             - name: Code-style etc. with Ruff
               run: |
                   uv run ruff check music21
@@ -107,8 +108,7 @@ jobs:
                       pyproject.toml
             - name: Install dependencies
               run: |
-                  uv pip install wheel
-                  uv pip install -e '.[dev]'
+                  uv pip install --system -e '.[dev]'
             - name: Type-check all modules with mypy
               run: |
                   uv run mypy music21
