--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 .mypy_cache/**
 **/.mypy_cache/**
 
+# we are a library, don't lock the requirements
+uv.lock
+
 # PyCharm
 # Keep some to help new users...
 .idea/codeStyles
